--- a/core/dashboard/templates/main.html
+++ b/core/dashboard/templates/main.html
@@ -37,21 +37,21 @@
         <a class="nav-link" data-widget="pushmenu" href="#" role="button"><i class="fas fa-bars"></i></a>
       </li>
       <li class="nav-item d-none d-sm-inline-block">
-        <a href="" class="btn btn-outline-success m-1">Home</a>
+        <a href="{% url 'dashboard'  %}" class="btn btn-outline-success m-1">Home</a>
       </li>
 
     </ul>
-    
+
     <!-- Right navbar links -->
     <ul class="navbar-nav ml-auto">
       <li class="nav-item"><a  href="" class=" m-2">
-        <svg xmlns="http://www.w3.org/2000/svg" width="22" height="22" fill="currentColor" class="bi bi-person-circle" viewBox="0 0 16 16">
+        <svg xmlns="http://www.w3.org/2000/svg" width="22" height="22" fill="black" class="bi bi-person-circle" viewBox="0 0 16 16">
           <path d="M11 6a3 3 0 1 1-6 0 3 3 0 0 1 6 0"/>
           <path fill-rule="evenodd" d="M0 8a8 8 0 1 1 16 0A8 8 0 0 1 0 8m8-7a7 7 0 0 0-5.468 11.37C3.242 11.226 4.805 10 8 10s4.757 1.225 5.468 2.37A7 7 0 0 0 8 1"/>
         </svg>
-        Hello
+        Hello {{request.user}}
       </a></li>
-      <li class="nav-item"><a  href="" class="m-4">
+      <li class="nav-item"><a  href="{% url 'logout' %}" class="m-4">
         <svg xmlns="http://www.w3.org/2000/svg" width="22" height="22" fill="red" class="bi bi-box-arrow-right" viewBox="0 0 16 16">
           <path fill-rule="evenodd" d="M10 12.5a.5.5 0 0 1-.5.5h-8a.5.5 0 0 1-.5-.5v-9a.5.5 0 0 1 .5-.5h8a.5.5 0 0 1 .5.5v2a.5.5 0 0 0 1 0v-2A1.5 1.5 0 0 0 9.5 2h-8A1.5 1.5 0 0 0 0 3.5v9A1.5 1.5 0 0 0 1.5 14h8a1.5 1.5 0 0 0 1.5-1.5v-2a.5.5 0 0 0-1 0z"/>
           <path fill-rule="evenodd" d="M15.854 8.354a.5.5 0 0 0 0-.708l-3-3a.5.5 0 0 0-.708.708L14.293 7.5H5.5a.5.5 0 0 0 0 1h8.793l-2.147 2.146a.5.5 0 0 0 .708.708l3-3z"/>
@@ -97,9 +97,35 @@
             </a>
             <ul class="nav nav-treeview">
               <li class="nav-item">
-                <a href="" class="nav-link active">
+                <a href="{% url 'dashboard'  %}" class="nav-link active">
                   <i class="far fa-circle nav-icon"></i>
                   <p>Home</p>
+                </a>
+              </li>
+               {% if request.user.is_superuser %}
+              <li class="nav-item">
+                <a href="{% url 'admin:index'  %}" class="nav-link ">
+                  <i class="far fa-circle nav-icon"></i>
+                  <p>Admin Page</p>
+                </a>
+              </li>
+              {% endif %}
+
+            </ul>
+          </li>
+          <li class="nav-item has-treeview menu-open">
+            <a href="#" class="nav-link active">
+              <i class="nav-icon fas fa-tachometer-alt"></i>
+              <p>
+                Inventory
+                <i class="right fas fa-angle-left"></i>
+              </p>
+            </a>
+            <ul class="nav nav-treeview">
+              <li class="nav-item">
+                <a href="{% url 'inventory'  %}" class="nav-link ">
+                  <i class="far fa-circle nav-icon"></i>
+                  <p>Inventory</p>
                 </a>
               </li>
 
