--- a/core/dashboard/templates/inventory.html
+++ b/core/dashboard/templates/inventory.html
@@ -1,52 +1,78 @@
 {% extends "main.html" %}
 
-
+{% load crispy_forms_tags %}
 {% block title %} Inventory List {% endblock title %}
 
 
 {% block content %}
 
-<!--        {% for stock in stocks%}-->
-<!--           <p>{{ stock.name }}</p>-->
-<!--        {% endfor %}-->
-        <table class="table table-css table-bordered table-hover">
+<div class="row" style="color: #4e4e4e; font-style: bold; font-size: 3rem; ">
+    <div class="col-md-8"> Inventory list</div>
 
-        <!-- Log on to codeastro.com for more projects -->
-            <form method="get">
-                <div class="input-group search">
+    <div class="col-md-4">
+        <div style="float:right;">
+            <a href="{% url 'new-stock' %}" type="button" class="btn btn-outline-info">New Stock</a>
+        </div>
 
-                    <div class="input-group-append">
-                       <button type="submit" class="btn btn-pink"> Search </button>
-                    </div>
-                </div>
-            </form>
+    </div>
+</div>
+<div class="container mt-3">
+  <form class="form-inline justify-content-end mb-3">
+    {{ myFilter.form|crispy }}
+    <button class="btn btn-outline-success ml-2" type="submit">Search</button>
+  </form>
+</div>
+      <table class="table table-css table-bordered table-hover">
+          <thead class="thead-dark align-middle">
+            <tr>
+              <th scope="col">#</th>
+              <th scope="col">Name</th>
+              <th scope="col">Product Material</th>
+              <th scope="col">Product Type</th>
+                <th scope="col">Quantity </th>
+                <th scope="col">Actions </th>
+            </tr>
+          </thead>
 
-            <br>
+          <tbody>
+          {% for stock in stocks %}
+            <tr>
+              <th scope="row">{{ stock.id }}</th>
+              <td>{{ stock.name }}</td>
+              <td>{{ stock.product_material }}</td>
+              <td>{{ stock.product_type }}</td>
+              <td>{{ stock.quantity }}</td>
+                <td>
+                    <a href="{% url 'update-stock' stock.pk %}" type="button" class="btn btn-outline-secondary">Edit Stock</a>
+                    <a href="{% url 'delete-stock' stock.pk %}" type="button" class="btn btn-outline-danger">Delete Stock</a>
+                </td>
+            </tr>
+          {% endfor %}
+          </tbody>
+    </table>
 
-            <thead class="thead-dark align-middle">
-                <tr>
-                    <th width="40%">Stock Name</th>
-                    <th>Current Stock in Inventory</th>
-                    <th>Actions</th>
-                </tr>
-            </thead>
+                                       <!-- pagination -->
 
+       <div style="margin-top: 5px;">
+        {% if  stocks.has_other_pages %}
+        <ul class="pagination">
+            {% if  stocks.has_previous %}
+            <li class="page-item"><a href="?page={{ projects.previous_page_number }}" class="page-link">&laquo;</a> </li>
+            {% endif %}
 
+            {% for i in  stocks.paginator.page_range %}
+            {% if updates.number == i %}
+            <li class="page-item"><a class="active page-link">{{ i }}</a> </li>
+            {% else %}
+            <li class="page-item"><a href="?page={{ i }}" class="page-link">{{ i }}</a> </li>
+            {% endif %}
+            {% endfor %}
 
-            <tbody>     <!-- Log on to codeastro.com for more projects -->
-                {% for stock in object_list %}
-                    <tr>
-                        <td>
-                            <p>{{ stock.name }}</p>
-                        </td>
-                        <td class="align-middle">{{ stock.quantity }}</td>
-                        <td class="align-middle">
-                            <a href="" class="btn btn-info btn-sm">Edit Details</a>
-                            <a href="" class="btn btn-danger btn-sm"> Delete Stock </a>
-                        </td>
-                    </tr>
-                {% endfor %}
-            </tbody>
-
-        </table>
+            {% if  stocks.has_next %}
+            <li class="page-item"><a href="?page={{ projects.next_page_number }}" class="page-link">&raquo;</a></li>
+            {% endif %}
+        </ul>
+        {% endif %}
+    </div>
+       <!-- /.pagination -->
 {% endblock content %}
