--- a/core/dashboard/templates/main.html
+++ b/core/dashboard/templates/main.html
@@ -129,6 +129,13 @@
                 </a>
               </li>
 
+                 <li class="nav-item">
+                <a href="{% url 'purchases-list'  %}" class="nav-link ">
+                  <i class="far fa-circle nav-icon"></i>
+                  <p>Purchase</p>
+                </a>
+              </li>
+
             </ul>
           </li>
         </ul>
