--- a/core/dashboard/templates/bill/sales_bill.html
+++ b/core/dashboard/templates/bill/sales_bill.html
@@ -7,7 +7,7 @@
 
 {% block content %}
 
-    <div style="color:#575757; font-style: bold; font-size: 3rem;  border-bottom: 1px solid white;">Purchase Bill No : {{ bill.billno }}</div>
+    <div style="color:#575757; font-style: bold; font-size: 3rem;  border-bottom: 1px solid white;">Sales Bill No : {{ bill.billno }}</div>
 
     <!-- <br><br> --><!-- Log on to codeastro.com for more projects -->
     
