--- a/core/dashboard/templates/purchases/purchases_list.html
+++ b/core/dashboard/templates/purchases/purchases_list.html
@@ -11,7 +11,7 @@
     <div class="row" style="color: #575757; font-style: bold; font-size: 3rem;">
         <div class="col-md-8">Purchases List</div>
         <div class="col-md-4">            <!-- Log on to codeastro.com for more projects -->
-            <div style="float:right;"> <a class="btn btn-success" href="{% url 'new-purchase'  bills.pk %}">New Purchase</a> </div>
+            <div style="float:right;"> <a class="btn btn-success" href="{% url 'new-purchase'  %}">New Purchase</a> </div>
         </div>
     </div>
 
