--- a/core/dashboard/templates/main.html
+++ b/core/dashboard/templates/main.html
@@ -136,6 +136,13 @@
                 </a>
               </li>
 
+                 <li class="nav-item">
+                <a href="{% url 'sales-list'  %}" class="nav-link ">
+                  <i class="far fa-circle nav-icon"></i>
+                  <p>Sales</p>
+                </a>
+              </li>
+
             </ul>
           </li>
         </ul>
