--- a/core/dashboard/templates/sales/sales_list.html
+++ b/core/dashboard/templates/sales/sales_list.html
@@ -30,10 +30,10 @@
             </tr>
         </thead>
 
-{% if bills %}
+{% if sales %}
 
         <tbody>
-            {% for sale in bills %}
+            {% for sale in sales %}
             <tr>
                 <td class="align-middle"> <p>{{ sale.billno }}</p> </td>
                 <td class="align-middle">{{ sale.stock }}</td>
