--- a/core/dashboard/templates/bill/sales_bill.html
+++ b/core/dashboard/templates/bill/sales_bill.html
@@ -31,7 +31,7 @@
                             <td >
                                 <span style="font-size: 350%;">all.thingsaccessories</span> <br>
                                 <span style="font-size: 120%; font-weight: bold;">DEALERS IN : Jewelery</span> <br>
-                                <span style="font-weight: bold;">ADDRESS :</span> 971 Center Street<br>Nairobi<br>
+                                <span style="font-weight: bold;">ADDRESS : Nairobi</span> <br>
                                 <span style="font-weight: bold;">EMAIL : all.thingsaccessories@mail.com</span> <br><br>
                             </td><!-- Log on to codeastro.com for more projects -->
                         </tr>
