--- a/core/dashboard/templates/purchases/purchases_list.html
+++ b/core/dashboard/templates/purchases/purchases_list.html
@@ -1,7 +1,7 @@
 {% extends "main.html" %}
 <!-- Log on to codeastro.com for more projects -->
 {% load static %}
-
+{% load crispy_forms_tags %}
 
 {% block title %} Home {% endblock title %}
 
@@ -16,6 +16,12 @@
     </div>
 
     <br>
+<div class="container mt-3">
+  <form class="form-inline justify-content-end mb-3">
+    {{ myFilter.form|crispy }}
+    <button class="btn btn-outline-success ml-2" type="submit">Search</button>
+  </form>
+</div>
 
     <table class="table table-css table-hover table-bordered">
 
@@ -40,11 +46,35 @@
                 <td class="align-middle">{{ purchase.perprice }}</td>
                 <td class="align-middle">{{ purchase.quantity }}</td>
                 <td class="align-middle">${{ purchase.totalprice }}</td>
-                <td class="align-middle"> <a href="{% url 'purchase-bill' purchase.billno %}" class="btn btn-secondary btn-sm">View Bill</a> <a href="" class="btn btn-danger btn-sm">Delete Bill</a> </td>
+                <td class="align-middle"> <a href="{% url 'purchase-bill' purchase.billno %}" class="btn btn-secondary btn-sm">View Bill</a> </td>
             </tr>
             {% endfor %}
         </tbody>
 
     </table>
 {% endif %}
+                                       <!-- pagination -->
+
+       <div style="margin-top: 5px;">
+        {% if  bills.has_other_pages %}
+        <ul class="pagination">
+            {% if  bills.has_previous %}
+            <li class="page-item"><a href="?page={{ projects.previous_page_number }}" class="page-link">&laquo;</a> </li>
+            {% endif %}
+
+            {% for i in  bills.paginator.page_range %}
+            {% if updates.number == i %}
+            <li class="page-item"><a class="active page-link">{{ i }}</a> </li>
+            {% else %}
+            <li class="page-item"><a href="?page={{ i }}" class="page-link">{{ i }}</a> </li>
+            {% endif %}
+            {% endfor %}
+
+            {% if  bills.has_next %}
+            <li class="page-item"><a href="?page={{ projects.next_page_number }}" class="page-link">&raquo;</a></li>
+            {% endif %}
+        </ul>
+        {% endif %}
+    </div>
+       <!-- /.pagination -->
 {% endblock content %}
